--- a/common.css
+++ b/common.css
@@ -1,7 +1,48 @@
+
+
+
 body,html{
     display: flex;
     flex-direction: column;
     height:100%;
+    background-color: #2B3A67;
+}
+
+header{
+    margin-bottom: 2rem;
+    
+}
+
+header .nav-link, h1, footer .nav-link, p, h2,h3,li{
+    color: #F5F5F5;
+}
+
+h1, h2, h3 {
+    margin-bottom: 1.5rem;
+}
+
+footer .nav-link{
+    margin-right: 10px;
+}
+
+.footer-github {
+    color:black;
+    margin-right: 10px;
+    transition: all 0.3s ease-in;
+}
+
+.footer-github:hover{
+    color:#F5F5F5;
+    
+}
+
+.btn {
+    background-color: #FD6B42;
+    border-color: #FD6B42;
+}
+
+.btn:hover{
+    background-color: #ff5020;
 }
 
 .footer{
@@ -9,21 +50,10 @@ body,html{
     margin-top: auto;
 }
 
-.footer-link {
-    text-decoration: none;
-    color: black;
-    margin-right: 10px;
-}
-
 .footer-link:hover {
     color: whitesmoke;
 }
 
-@media screen and (max-height:56px){
-    .footer{
-        position: absolute;
-        bottom:0;
-        left:0;
-        width:100%;
-    }
+.card-body p {
+    color:black;
 }
